--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@babel/core": "^7.13.10",
     "@babel/preset-env": "^7.13.10",
     "babel-loader": "^8.2.2",
+    "file-loader": "^6.2.0",
+    "json-loader": "^0.5.7",
     "webpack-dev-server": "^3.11.2"
   }
 }
